--- a/index.html
+++ b/index.html
@@ -2,85 +2,85 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script type="text/javascript" src="assetts/javascript/app.js"></script>
-    <link rel="stylesheet" type="text/css" href="assetts/css/style.css">
-    <meta charset="UTF-8">
-    <title>Animals!</title>
-</head>
 
+    <head>
+        <link rel="stylesheet" type="text/css" href="assetts/css/style.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+        <meta charset="utf-8">
+        <title>The Zoo</title>
+    </head>
 
 <body>
-    <button data-person="goat">Goat</button>
-    <button data-person="cat">Cat</button>
-    <button data-person="sloth">Sloth</button>
-    <button data-person="koala">Koala</button>
-    <button data-person="panda">Panda</button>
-    <button data-person="llama">Llama</button>
-    <button data-person="kangaroo">Kangaroo</button>
-    <button data-person="lemur">Lemur</button>
-    <button data-person="reindeer">Reindeer</button>
-    <button data-person="ostrich">Ostrich</button>
-    <button data-person="emu">Emu</button>
-    <button data-person="lizard">Lizard</button>
-    <button data-person="aligator">Aligator</button>
 
-    <div id="gifs-appear-here">
-    </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script type="text/javascript">
-        $("button").on("click", function () {
-            // In this case, the "this" keyword refers to the button that was clicked
-            var animal = $(this).attr("data-person");
-            console.log(this);
+    <div class="container">
+        <div id="title">
+            <h1>Welcome to the Zoo</h1>
+        </div>
+        
+        <form id="animal-form">
+                <label for="animal-input"></label>
+                <input type="text" id="animal-input"><br>
+                <input id="add-animal" type="submit" value="Who in the Zoo?!">
+            </form>
 
-            // Constructing a URL to search Giphy for the name of the person who said the quote
-            var queryURL = "https://api.giphy.com/v1/gifs/search?q=" +
-                animal + "&api_key=dc6zaTOxFJmzC&limit=10";
 
-            // Performing our AJAX GET request
-            $.ajax({
-                url: queryURL,
-                method: "GET"
-            })
-                // After the data comes back from the API
-                .then(function (response) {
-                    // Storing an array of results in the results variable
-                    var results = response.data;
+        <div id="animals-view"></div>
 
-                    // Looping over every result item
-                    for (var i = 0; i < results.length; i++) {
 
-                        // Only taking action if the photo has an appropriate rating
-                        if (results[i].rating !== "r" && results[i].rating !== "pg-13") {
-                            // Creating a div for the gif
-                            var gifDiv = $("<div>");
+        <div id="gif-home">
+        </div>
 
-                            // Storing the result item's rating
-                            var rating = results[i].rating;
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script type="text/javascript">
+            var animals = ["lion", "panda", "kangaroo", "llama"];
+            function renderButtons() {
+                $("#animals-view").empty();
+                for (var i = 0; i < animals.length; i++) {
+                    var a = $("<button>");
+                    a.addClass("animal");
+                    a.attr("data-name", animals[i]);
+                    a.text(animals[i]);
+                    $("#animals-view").append(a);
+                }
+            }
+            $("#add-animal").on("click", function (event) {
+                event.preventDefault();
+                var animal = $("#animal-input").val().trim();
+                animals.push(animal);
+                renderButtons();
+            });
+            renderButtons();
 
-                            // Creating a paragraph tag with the result item's rating
-                            var p = $("<p>").text("Rating: " + rating);
-
-                            // Creating an image tag
-                            var personImage = $("<img>");
-
-                            // Giving the image tag an src attribute of a proprty pulled off the
-                            // result item
-                            personImage.attr("src", results[i].images.fixed_height.url);
-
-                            // Appending the paragraph and personImage we created to the "gifDiv" div we created
-                            gifDiv.append(p);
-                            gifDiv.append(personImage);
-
-                            // Prepending the gifDiv to the "#gifs-appear-here" div in the HTML
-                            $("#gifs-appear-here").prepend(gifDiv);
+            ///////////////////////////////////////////////////
+            $("button").on("click", function () {
+                var animalz = $(this).attr("data-name", animals);
+                console.log(this);
+                console.log();
+                var queryURL = "https://api.giphy.com/v1/gifs/search?q=" +
+                    animalz + "&api_key=dc6zaTOxFJmzC&limit=10";
+                    console.log(queryURL);
+                $.ajax({
+                    url: queryURL,
+                    method: "GET"
+                })
+                    .then(function (response) {
+                        var results = response.data;
+                        for (var i = 0; i < results.length; i++) {
+                            if (results[i].rating !== "r") {
+                                var gifDiv = $("<div>");
+                                var rating = results[i].rating;
+                                var p = $("<p>").html("<h2>Rating: </h2>" + rating);
+                                var animalImage = $("<img>");
+                                animalImage.attr("src", results[i].images.fixed_height.url);
+                                gifDiv.append(p);
+                                gifDiv.append(animalImage);
+                                $("#gif-home").prepend(gifDiv);
+                            }
                         }
-                    }
+                    });
                 });
-        });
-    </script>
+        </script>
+    </div>
 </body>
 
 </html>
